# SickzilSFMLUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
SickzilSFMLUI/: CMakeLists.txt  entry.cpp
SickzilSFMLUI/common/: main_window.cpp
SickzilSFMLUI/includes/: controls.hpp  draw_object.hpp  main_window.hpp  sub_window.hpp
SickzilSFMLUI/includes/windows/: consistency.hpp
src/: CMakeLists.txt
